src/snapshots/interpreter__parser__tests__unknown_envs@with_args.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\begin{asfs}[opt]{arg} as \\end{asfs}`"
---
stmts:
  - Env:
      name: asfs
      children:
        - SquareBlock:
            - Text: opt
        - Block:
            - Text: arg
        - Token: Space
        - Text: as
        - Token: Space
      is_alt: false
      kind: Regular
      start_end: ~
errors: []

