src/snapshots/interpreter__parser__tests__unknown_macros@som.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr*[opt]{pkg}`"
---
stmts:
  - Macro:
      name: asdfr
  - Token: Asterisk
  - SquareBlock:
      - Text: opt
  - Block:
      - Text: pkg
errors: []

