src/snapshots/interpreter__parser__tests__unknown_macros@som_spaced.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr  *  [opt]  {pkg}  `"
---
stmts:
  - Macro:
      name: asdfr
  - Token: Space
  - Token: Asterisk
  - Token: Space
  - SquareBlock:
      - Text: opt
  - Token: Space
  - Block:
      - Text: pkg
  - Token: Space
errors: []

